# email-assistant

./: .env  .env.dav  .env.dist  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile_dev  LICENSE  README.md  README_dev.md  docker-compose_dev.yml
src/: api.rs  main.rs  reader.rs  receipt.rs
src/api/: cooptation.rs  eos.rs  profiling.rs
src/service/: inbox.rs  outbox.rs
