[package]
name = "death-to-the-pixels"
version = "0.1.0"
authors = ["rvuong"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imap = "2.1.2"
lettre = "0.9"
lettre_email = "0.9"
native-tls = "0.2.4"
uuid = { version = "0.8.1", features = ["v4"] }
