[package]
name = "death-to-the-pixels"
version = "0.1.0"
authors = ["rvuong"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12.1" # decode base64-encoded email attachments
env_logger = "0.7.1"
imap = "2.1.2"
lettre = "0.9" # SMTP
lettre_email = "0.9" # SMTP emails
log = "0.4.8"
native-tls = "0.2.4" # imap dependency
regex = "1.3.7"
reqwest = { version = "0.10.6", features = ["blocking"] }
serde = { version = "0.9", features = ["derive"] }
serde_json = "0.9"
uuid = { version = "0.8.1", features = ["v4"] } # Universal Unique ID for SMTP emails
